--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Anna Olson</title>
+    <link href="index_styles.css" rel="stylesheet"/>
   </head>
     <body>
     <h1>Anna Olson</h1>
