--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8"/>
    
-    <title>Anna Olson</title>
+    <title>Website</title>
     
     <link href="index_styles.css" rel="stylesheet"/>
 
