--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
   <head>
     <meta charset="utf-8"/>
    
-    <title>Website</title>
+    <title>Anna Olson</title>
     
     <link href="index_styles.css" rel="stylesheet"/>
 
   </head>
     <body>
-    <h1>Anna Olson</h1>
-      <h2>Portfolio Site</h2>
+      <header>
+        <h1>Anna Olson</h1>
+          <h2>Portfolio Site</h2>
+            <nav class="horizontalNavigation">
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="hobbies.html">Hobbies</a></li>
+                </ul>
+        </header>
     </body>
+
       
 </html>
