--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
     <body>
       <header>
         <h1>Anna Olson</h1>
+
           <h2>Portfolio Site</h2>
             <nav class="horizontalNavigation">
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="hobbies.html">Hobbies</a></li>
                 </ul>
+            </nav> 
+
+
         </header>
     </body>
 
