--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <h1>Anna Olson</h1>
 
           <h2>Portfolio Site</h2>
-            <nav class="horizontalNavigation">
+            <nav class="verticalNavigation">
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="hobbies.html">Hobbies</a></li>
                 </ul>
             </nav> 
-
+            <img src="ufo.jpg" alt=""/>
 
         </header>
     </body>
