--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <img src="ufo.jpg" alt=""/>
 
         </header>
+        <article>
+          <h3>About Me</h3>
+          <p>
+            about me about me about me about me about me about me about me about me about me about me about me about me about me
+          </p>
+          </article>
     </body>
 
       
