--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         <h1>Anna Olson</h1>
 
           <h2>Portfolio Site</h2>
-            <nav class="verticalNavigation">
+          <nav class="horizontal" id="mainLinks">
               <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="hobbies.html">Hobbies</a></li>
+                <li><a href="#">Page1</a></li>
+                <li><a href="#">Page2</a></li>
+                <li><a href="#">Page3</a></li>
+                <li><a href="#">Page4</a></li>
                 </ul>
             </nav> 
            
@@ -32,5 +35,9 @@
           </article>
     </body>
 
+    <footer>
+
+
+      </footer>
       
 </html>
